<!--
  ~ Copyright 2017, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">북마크 SE</string>
    <string name="navigation_view_header_title">북마크 SE</string>
    <string name="info_title">정보</string>
    <string name="notice_title">알림</string>
    <string name="bookmark_title">북마크</string>
    <string name="note_title">노트</string>
    <string name="home_title">Home</string>
    <string name="push_notice_title">푸시알림</string>
    <string name="dark_theme_title">다크테마</string>
    <string name="menu_add">추가하기</string>
    <string name="popup_add_item_ok">확인</string>
    <string name="popup_add_item_cancel">취소</string>
    <string name="popup_add_item_title">아이템 추가</string>
    <string name="popup_edit_bookmark">북마크 편집</string>
    <string name="popup_edit_category">카테고리 편집</string>
    <string name="popup_add_item_et_title">제목</string>
    <string name="popup_add_item_et_url">주소</string>
    <string name="popup_add_item_category">카테고리</string>
    <string name="loading">loading...</string>
    <string name="https">https://</string>
    <string name="http">http://</string>
    <string name="edit_item_title">Title</string>
    <string name="edit_item_url">URL</string>
    <string name="popup_edit_btn_edit">편집</string>
    <string name="popup_edit_btn_delete">삭제</string>
    <string name="popup_edit_btn_share">공유</string>
    <string name="edit_delete_questions">아이템을 삭제하시겠습니까?</string>
    <string name="user_title">사용자 정보</string>

    <string name="no_bookmarks_add">Click to add a Bookmarks</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">
        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
    </string>

    <string name="men_refresh">새로고침</string>
    <string name="menu_search">검색</string>
    <string name="menu_close">종료</string>
    <string name="add_bookmark">북마크 추가</string>
    <string name="logo">bookmark logo</string>
    <string name="label_recent">Recent Selected Bookmarks</string>
    <string name="no_bookmarks">Click to category</string>
    <string name="label_category">Bookmarks by category</string>
    <string name="nav_recent">Recent</string>
    <string name="nav_category">Category</string>
    <string name="bookmark_et">Bookmark Title</string>
    <string name="https_hint">https://</string>
    <string name="edit_bookmark">Edit Bookmark</string>
    <string name="empty_input_message">Input values Cannot be empty</string>
    <string name="url_validation_check">Check the URL format</string>
    <string name="successfully_saved_message">Item saved</string>
    <string name="transition_img">transition_img</string>
    <string name="transition_title">transition_title</string>
    <string name="transition_url">transition_url</string>
    <string name="bookmark">Bookmark</string>
    <string name="transition_category">transition_category</string>
    <string name="last_selected">Last selected</string>
    <string name="address">Address</string>
    <string name="edit">Edit</string>
    <string name="web">Web</string>
    <string name="share">Share</string>
    <string name="ok">OK</string>
    <string name="complete">Complete</string>
    <string name="add_bookmark_eng">Add Bookmark</string>
    <string name="delete_bookmark">Delete Bookmark</string>
    <string name="done">Done</string>
    <string name="delete_bookmarks">Delete Bookmarks</string>
    <string name="deleted_bookmarks">Deleted Bookmarks</string>
    <string name="no_items_selected">No items selected</string>
    <string name="select_all">Select All</string>
    <string name="refresh">Refresh</string>
    <string name="close">Close</string>
</resources>
