<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".addeditbookmark.AddEditBookmarkActivity">

    <EditText
        android:id="@+id/bookmark_et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:layout_marginTop="15dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:ems="10"
        android:background="@drawable/custom_input"
        android:hint="@string/bookmark_et"
        android:inputType="text"
        android:textSize="14sp"
        android:drawablePadding="12dp"
        android:drawableLeft="@drawable/custom_bookmark_icon"
        android:drawableStart="@drawable/custom_bookmark_icon" />

    <EditText
        android:id="@+id/url_et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_input"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:ems="10"
        android:hint="@string/https_hint"
        android:inputType="textPostalAddress"
        android:textSize="14sp"
        android:drawablePadding="12dp"
        android:drawableLeft="@drawable/custom_url_icon"
        android:drawableStart="@drawable/custom_url_icon" />

    <EditText
        android:id="@+id/category_et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_input"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:ems="10"
        android:hint="@string/nav_category"
        android:inputType="text"
        android:textSize="14sp"
        android:drawablePadding="12dp"
        android:drawableLeft="@drawable/custom_category_icon"
        android:drawableStart="@drawable/custom_category_icon" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/category_cg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="15dp">

    </com.google.android.material.chip.ChipGroup>

</LinearLayout>