<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View.OnClickListener" />

        <variable
            name="bookmark"
            type="com.jrooms.bookmark_kotlin.data.Bookmark" />

        <variable
            name="listener"
            type="com.jrooms.bookmark_kotlin.bookmark.ItemUserActionsListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_bookmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/bookmark_touch_feedback"
        android:clickable="true"
        android:focusable="true"
        android:onClick="@{() -> listener.onBookmarkClicked(bookmark)}">

        <ImageView
            android:id="@+id/iv_url_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/logo"
            android:transitionName="@string/transition_img"
            app:layout_constraintBottom_toBottomOf="@+id/tv_bookmark_url"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_bookmark_title"
            android:layout_marginLeft="10dp"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/tv_bookmark_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="20sp"
            android:text="@{bookmark.title}"
            android:textColor="#ffffff"
            android:maxLines="1"
            android:transitionName="@string/transition_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_url_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/tv_bookmark_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:textSize="10sp"
            android:text="@{bookmark.url}"
            android:transitionName="@string/transition_url"
            android:textColor="#ffffff"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_bookmark_title"
            app:layout_constraintStart_toStartOf="@+id/tv_bookmark_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_bookmark_title"
            tools:ignore="SmallSp"
            tools:targetApi="lollipop" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>